# pp-check

./: .gitignore  README.md  cli_install_app.sh  cli_install_bash.sh  cli_install_cmd.cmd  pyproject.toml
app/: ppcheck.py  pyinstaller.py
app/libs/: classes.py  cls.py  func.py  functions.py
tests/: test_attr_exists.py  test_create_table.py  test_execute_cmd.py  test_run_scripts.py  test_short.py
